--- a/index.html
+++ b/index.html
@@ -23,27 +23,25 @@
 
 <button id="triggerBotAction1">Button1</button>
 <button id="triggerBotAction2">Button2</button>
-
-<iframe id="bot-iframe"></iframe>
+<iframe id="bot-iframe" style="display:none;width:400px;height:500px;"></iframe>
 
 <script>
-  const botIframe = document.getElementById('bot-iframe');
-  const baseUrl = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+const botIframe = document.getElementById("bot-iframe");
+const configUrl = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
-  // Button1
-  document.getElementById('triggerBotAction1').addEventListener('click', () => {
-    botIframe.src = baseUrl + "&trigger=action1";
-    botIframe.style.display = 'block';
-    console.log("Opened Webchat iframe with trigger=action1");
-  });
+document.getElementById("triggerBotAction1").onclick = () => {
+  botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${configUrl}&trigger=action1`;
+  botIframe.style.display = "block";
+  console.log("Opened Webchat iframe with trigger=action1");
+};
 
-  // Button2
-  document.getElementById('triggerBotAction2').addEventListener('click', () => {
-    botIframe.src = baseUrl + "&trigger=action2";
-    botIframe.style.display = 'block';
-    console.log("Opened Webchat iframe with trigger=action2");
-  });
+document.getElementById("triggerBotAction2").onclick = () => {
+  botIframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${configUrl}&trigger=action2`;
+  botIframe.style.display = "block";
+  console.log("Opened Webchat iframe with trigger=action2");
+};
 </script>
+
 
 </body>
 </html>
