--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <button id="triggerBotAction1">Button1</button>
 <button id="triggerBotAction2">Button2</button>
 <iframe id="bot-iframe" style="display:none;width:400px;height:500px;"></iframe>
-
+<script scr="https://cdn.botpress.cloud/webchat/v2.S/inject.js"></script>
 <script>
 const botIframe = document.getElementById("bot-iframe");
 const configUrl = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
