--- a/index.html
+++ b/index.html
@@ -17,27 +17,19 @@
 
 <h2>Botpress Trigger Test</h2>
 
-<button id="triggerBotAction1">Trigger Action 1</button>
-<button id="triggerBotAction2">Trigger Action 2</button>
+<button onclick="openBot('action1')">Action 1</button>
+<button onclick="openBot('action2')">Action 2</button>
 
 <script>
-  const BOT_URL = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html";
-  const CONFIG_URL = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
+const BOT_URL = "https://cdn.botpress.cloud/webchat/v3.5/shareable.html";
+const CONFIG_URL = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
-  function openBotWithTrigger(triggerName) {
-    const url = `${BOT_URL}?configUrl=${encodeURIComponent(CONFIG_URL)}&trigger=${encodeURIComponent(triggerName)}`;
-    // 打开新的 Webchat iframe
-    window.open(url, "_blank", "width=400,height=600");
-  }
-
-  document.getElementById("triggerBotAction1").onclick = () => {
-    openBotWithTrigger("action1");
-  };
-
-  document.getElementById("triggerBotAction2").onclick = () => {
-    openBotWithTrigger("action2");
-  };
+function openBot(triggerName) {
+  const url = `${BOT_URL}?configUrl=${encodeURIComponent(CONFIG_URL)}&trigger=${encodeURIComponent(triggerName)}`;
+  window.open(url, "_blank", "width=400,height=600");
+}
 </script>
+
 
 </body>
 </html>
