--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
 </style>
 </head>
 <body>
-
-<button onclick="openBot('action1')">Button1a</button>
-<button onclick="openBot('action2')">Button2a</button>
+<button onclick="openBot('action1')">Button1</button>
+<button onclick="openBot('action2')">Button2</button>
 
 <div id="bot-container"></div>
 
 <script>
 const CONFIG_URL = "https://files.bpcontent.cloud/2025/12/22/00/20251222001942-XSX123E9.json";
 
-function openBot(triggerName) {
+function openBot(trigger) {
   const container = document.getElementById('bot-container');
-  container.innerHTML = ''; // 清空旧 iframe
+  container.innerHTML = ''; // 删除旧 iframe
   const iframe = document.createElement('iframe');
-  iframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(CONFIG_URL)}&trigger=${encodeURIComponent(triggerName)}`;
-  iframe.style.width = '100%';
-  iframe.style.height = '100%';
-  iframe.style.border = 'none';
+  iframe.src = `https://cdn.botpress.cloud/webchat/v3.5/shareable.html?configUrl=${encodeURIComponent(CONFIG_URL)}&trigger=${encodeURIComponent(trigger)}`;
+  iframe.width = '400';
+  iframe.height = '500';
+  iframe.style.border = '0';
   container.appendChild(iframe);
 }
 </script>
