--- a/index.html
+++ b/index.html
@@ -3,57 +3,108 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Botpress Trigger Demo</title>
+<title>Botpress Botbassador Demo</title>
 <style>
-  button { margin: 10px; padding: 10px 20px; font-size: 16px; cursor: pointer; }
+  body {
+    font-family: Arial, sans-serif;
+    padding: 2rem;
+    background-color: #f4f4f4;
+    color: #333;
+  }
+  h1, h2 { text-align: center; }
+  #myform {
+    max-width: 600px;
+    margin: 2rem auto;
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+  }
+  label { display:block; margin-bottom:0.5rem; font-weight:bold; }
+  input, textarea {
+    width:100%; padding:0.5rem; margin-bottom:1rem;
+    border:1px solid #ddd; border-radius:5px; font-size:1rem;
+  }
+  button {
+    background-color: #007BFF; color:#fff; padding:0.7rem 1.5rem;
+    font-size:1rem; border:none; border-radius:5px; cursor:pointer;
+    display:block; margin: 0 auto;
+  }
+  button:hover { background-color: #0056b3; }
 </style>
 </head>
 <body>
 
-<h1>Botpress Trigger Test</h1>
-<button id="triggerBotAction1">Trigger Action 1</button>
-<button id="triggerBotAction2">Trigger Action 2</button>
+<h1>Botpress Botbassador Program</h1>
+<h2>Demo Form to Trigger Bot</h2>
 
-<!-- Webchat SDK -->
-<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js"></script>
+<form id="myform">
+  <label for="name">Full Name:</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="linkedin">LinkedIn URL:</label>
+  <input type="text" id="linkedin" name="linkedin" required>
+
+  <label for="message">Message:</label>
+  <textarea id="message" name="message" rows="5"></textarea>
+
+  <button type="submit">Submit & Trigger Bot</button>
+</form>
+
+<!-- Botpress Webchat v3.5 -->
+<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js" onload="initBot()"></script>
+
 <script>
-  // 初始化 Webchat
+function initBot() {
+  // 初始化 Botpress
   window.botpressWebChat.init({
-      botId: "XSX123E9",  // 改成你的 botId
-      hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
-      messagingUrl: "https://messaging.botpress.cloud",
-      hideWidget: true,     // 默认不显示 widget
-      lazySocket: true,
-      useSessionStorage: true
+    botId: "XSX123E9",  // <-- 改成你的 botId
+    hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
+    messagingUrl: "https://messaging.botpress.cloud",
+    hideWidget: true,       // 默认隐藏 widget
+    lazySocket: true,
+    useSessionStorage: true
   });
 
-  // 点击按钮显示 bot 并发送 trigger
-  function triggerBot(action) {
-      // 显示 bot widget
-      window.botpressWebChat.sendEvent({ type: 'show' });
+  // 表单提交事件
+  const form = document.getElementById('myform');
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
 
-      // 发送自定义 trigger payload
-      window.botpressWebChat.sendPayload({ 
-          type: 'trigger', 
-          payload: { trigger: action } 
-      });
-      console.log("Triggered:", action);
-  }
+    // 收集表单信息
+    const detail = {
+      name: form.name.value,
+      email: form.email.value,
+      linkedin: form.linkedin.value,
+      message: form.message.value,
+      position: "Botbassador"
+    };
 
-  document.getElementById('triggerBotAction1').addEventListener('click', () => {
-      triggerBot("action1");
-  });
+    // 显示 Botpress Webchat
+    window.botpressWebChat.sendEvent({ type: 'show' });
 
-  document.getElementById('triggerBotAction2').addEventListener('click', () => {
-      triggerBot("action2");
-  });
-
-  // 可选：监听 Webchat 生命周期
-  window.botpressWebChat.onEvent((event) => {
-      if(event.type === 'LIFECYCLE.READY') {
-          console.log("Bot is ready");
+    // 等 bot 完全 ready 再发送 payload
+    const sendPayloadWhenReady = () => {
+      if (window.botpressWebChat && window.botpressWebChat.isReady) {
+        window.botpressWebChat.sendPayload({ type: 'trigger', payload: detail });
+      } else {
+        setTimeout(sendPayloadWhenReady, 50);
       }
+    };
+    sendPayloadWhenReady();
   });
+
+  // 监听 bot lifecycle，标记 ready
+  window.botpressWebChat.onEvent((event) => {
+    if (event.type === 'LIFECYCLE.READY') {
+      window.botpressWebChat.isReady = true;
+      console.log('Botpress Ready');
+    }
+  });
+}
 </script>
 
 </body>
