--- a/index.html
+++ b/index.html
@@ -58,54 +58,50 @@
 <script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js" onload="initBot()"></script>
 
 <script>
-function initBot() {
-  // 初始化 Botpress
-  window.botpressWebChat.init({
-    botId: "XSX123E9",  // <-- 改成你的 botId
-    hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
-    messagingUrl: "https://messaging.botpress.cloud",
-    hideWidget: true,       // 默认隐藏 widget
-    lazySocket: true,
-    useSessionStorage: true
-  });
+  function initBot() {
+    window.botpressWebChat.init({
+      botId: "XSX123E9",
+      hostUrl: "https://cdn.botpress.cloud/webchat/v3.5",
+      messagingUrl: "https://messaging.botpress.cloud",
+      hideWidget: true,
+      lazySocket: true,
+      useSessionStorage: true
+    });
 
-  // 表单提交事件
-  const form = document.getElementById('myform');
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
+    // 表单提交事件
+    const form = document.getElementById('myform');
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const detail = {
+        name: form.name.value,
+        email: form.email.value,
+        linkedin: form.linkedin.value,
+        message: form.message.value,
+        position: "Botbassador"
+      };
+      window.botpressWebChat.sendEvent({ type: 'show' });
 
-    // 收集表单信息
-    const detail = {
-      name: form.name.value,
-      email: form.email.value,
-      linkedin: form.linkedin.value,
-      message: form.message.value,
-      position: "Botbassador"
-    };
+      const sendPayloadWhenReady = () => {
+        if (window.botpressWebChat && window.botpressWebChat.isReady) {
+          window.botpressWebChat.sendPayload({ type: 'trigger', payload: detail });
+        } else {
+          setTimeout(sendPayloadWhenReady, 50);
+        }
+      };
+      sendPayloadWhenReady();
+    });
 
-    // 显示 Botpress Webchat
-    window.botpressWebChat.sendEvent({ type: 'show' });
-
-    // 等 bot 完全 ready 再发送 payload
-    const sendPayloadWhenReady = () => {
-      if (window.botpressWebChat && window.botpressWebChat.isReady) {
-        window.botpressWebChat.sendPayload({ type: 'trigger', payload: detail });
-      } else {
-        setTimeout(sendPayloadWhenReady, 50);
+    window.botpressWebChat.onEvent((event) => {
+      if (event.type === 'LIFECYCLE.READY') {
+        window.botpressWebChat.isReady = true;
+        console.log('Botpress Ready');
       }
-    };
-    sendPayloadWhenReady();
-  });
-
-  // 监听 bot lifecycle，标记 ready
-  window.botpressWebChat.onEvent((event) => {
-    if (event.type === 'LIFECYCLE.READY') {
-      window.botpressWebChat.isReady = true;
-      console.log('Botpress Ready');
-    }
-  });
-}
+    });
+  }
 </script>
+
+<script src="https://cdn.botpress.cloud/webchat/v3.5/inject.js" onload="initBot()"></script>
+
 
 </body>
 </html>
