--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2>Demo Form to Trigger Bot</h2>
 
 <form id="myform">
-  <label for="name">Full Name:</label>
+  <label for="name">Full Name1:</label>
   <input type="text" id="name" name="name" required>
 
   <label for="email">Email:</label>
