--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ This is a demo form. Submitting will trigger a Botpress bot with your info!
 </p>
 
 <form id="myform">
-  <label for="name">Your Full Name:</label>
+  <label for="name">Your Full Name1:</label>
   <input type="text" id="name" name="name" required>
 
   <label for="email">Email Address:</label>
