--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@ Click here to apply!
   window.botpressWebChat.init({
       "composerPlaceholder": "Chat with bot",
       "botConversationDescription": "This chatbot was built surprisingly fast with Botpress",
-      "botId": "XSX123E9",
+      "botId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
       "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
       "messagingUrl": "https://messaging.botpress.cloud",
-      "clientId": "XSX123E9",
+      "clientId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
       "lazySocket": true,
       "hideWidget":true,
       "useSessionStorage": true,
