--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ Click here to apply!
       "botId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
       "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
       "messagingUrl": "https://messaging.botpress.cloud",
-      "clientId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
+      "clientId": ""a77753bd-2319-48dd-a782-9d6ba282b204",
       "lazySocket": true,
       "hideWidget":true,
       "useSessionStorage": true,
