--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ button:hover { background:#0056b3;}
 
 <h1>Botpress Botbassador Demo</h1>
 <form id="myform">
-  <label>Name:</label><input type="text" id="name" name="name" required>
+  <label>Name1:</label><input type="text" id="name" name="name" required>
   <label>Email:</label><input type="email" id="email" name="email" required>
   <label>LinkedIn:</label><input type="text" id="linkedin" name="linkedin" required>
   <label>Message:</label><textarea id="message" name="message" rows="5"></textarea>
