--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Click here to apply!
 </h2></a>
 <em><strong>The following form is a demo for triggers and not the actuall Botpress ambassador application!</strong></em><br><br>
     <form id='myform'>
-        <label for="name">Your Full Name:</label>
+        <label for="name">Your Full Name1:</label>
         <input type="text" id="name" name="name" required>
 
         <label for="email">Email Address:</label>
@@ -119,7 +119,7 @@ Click here to apply!
       "botId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
       "hostUrl": "https://cdn.botpress.cloud/webchat/v1",
       "messagingUrl": "https://messaging.botpress.cloud",
-      "clientId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
+      "clientId": "a77753bd-2319-48dd-a782-9d6ba282b204",
       "lazySocket": true,
       "hideWidget":true,
       "useSessionStorage": true,
