--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ document.getElementById('myform').addEventListener('submit', function(event) {
   // Trigger a custom event
   detail ={
     name: event.target.name.value,
-    email: event.target.email.value
+    email: event.target.email.value,
     position: "Botbassador"
   }
   showBot()
