--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Click here to apply!
 </h2></a>
 <em><strong>The following form is a demo for triggers and not the actuall Botpress ambassador application!</strong></em><br><br>
     <form id='myform'>
-        <label for="name">Your Full Name:</label>
+        <label for="name">Your Full Name1:</label>
         <input type="text" id="name" name="name" required>
 
         <label for="email">Email Address:</label>
@@ -109,7 +109,18 @@ Click here to apply!
 </body>
 <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 <script>
-  window.botpressWebChat.init({
+ 
+</script>
+
+
+<script>
+var detail;
+var botLoaded = false;
+var botReady = false;
+var submitted = false;
+
+	function showinit(){
+		 window.botpressWebChat.init({
       "composerPlaceholder": "Chat with bot",
       "botConversationDescription": "This chatbot was built surprisingly fast with Botpress",
       "botId": "a513dc7b-a61b-4a0e-b0c2-79292f0f64b8",
@@ -122,15 +133,7 @@ Click here to apply!
       "enableConversationDeletion": true,
       "showPoweredBy": true
   });
-</script>
-
-
-<script>
-var detail;
-var botLoaded = false;
-var botReady = false;
-var submitted = false;
-
+	}
 function showBot(){
 	console.log("Showing bot....")
   window.botpressWebChat.sendEvent({type:'show'})
@@ -149,6 +152,7 @@ document.getElementById('myform').addEventListener('submit', function(event) {
     email: event.target.email.value,
     position: "Botbassador"
   }
+	showinit()
   showBot()
   console.log("Submitting....")
   submitted=true;
